--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 body{
   background:#0f0f1f;
   color:#fff;
-  width:100%;
   overflow-x:hidden;
 }
 
@@ -77,7 +76,10 @@ nav a:hover:after{
 .menu-panels{
   padding:140px 60px 80px 60px;
   display:grid;
-  grid-template-columns:repeat(4,1fr);
+
+  /* 🔥 АВТОМАТИЧЕСКАЯ АДАПТАЦИЯ */
+  grid-template-columns:repeat(auto-fit, minmax(260px, 1fr));
+
   gap:30px;
 }
 
@@ -123,7 +125,10 @@ nav a:hover:after{
 
 .testimonial-track{
   display:grid;
-  grid-template-columns:repeat(3,1fr);
+
+  /* 🔥 Тоже адаптивно */
+  grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+
   gap:40px;
 }
 
@@ -199,12 +204,11 @@ footer .logo{
   }
 
   .menu-panels{
-    grid-template-columns:repeat(2,1fr);
     padding:130px 30px 60px 30px;
   }
 
-  .testimonial-track{
-    grid-template-columns:repeat(2,1fr);
+  .testimonial-wrapper{
+    padding:80px 30px;
   }
 
   .cta-block{
@@ -233,12 +237,11 @@ footer .logo{
   }
 
   .menu-panels{
-    grid-template-columns:1fr;
     padding:130px 20px 50px 20px;
   }
 
-  .testimonial-track{
-    grid-template-columns:1fr;
+  .testimonial-wrapper{
+    padding:70px 20px;
   }
 
   .cta-block{
@@ -299,12 +302,10 @@ footer .logo{
       <p class="quote">"Замовляю щотижня — швидко та смачно!"</p>
       <p class="author">— Олена П.</p>
     </div>
-
     <div class="testimonial">
       <p class="quote">"Сім'я в захваті від доставки! Рекомендую всім."</p>
       <p class="author">— Андрій К.</p>
     </div>
-
     <div class="testimonial">
       <p class="quote">"Найкраща їжа для молодіжних тусовок!"</p>
       <p class="author">— Марія С.</p>
